ui(root): fix layouts shift terms

--- a/src/components/common/home/HomeFeed/index.css
+++ b/src/components/common/home/HomeFeed/index.css
@@ -31,6 +31,7 @@
 }
 
 .Home__searches {
+  min-height: 6rem;
   max-width: 80rem;
   display: flex;
   flex-wrap: wrap;
@@ -40,7 +41,7 @@
 }
 
 .Home__searches a {
-  font-size: 0.875em;
+  font-size: 1.2rem;
   color: var(--font-color);
   text-decoration: underline;
   animation: fadeIn 240ms linear;
